# agents

./: .cursorrules  .gitignore  Dockerfile  LICENCE  README.md  docker-compose.yaml  entrypoint.sh  env.example  pyproject.toml  requirements.txt
.cursor/rules/: fastapi-best-practices.mdc  sqlmodel-best-practices.mdc
app/: main.py
app/api/: main.py
app/api/routes/: agent.py
app/core/: config.py  db.py
app/migrations/: env.py
app/schemas/: agent.py
app/services/: agent.py
