[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.26",
    "llama-index-core>=0.12.49",
    "llama-index-embeddings-openai>=0.3.1",
    "llama-index-llms-openai>=0.4.7",
    "llama-index-vector-stores-pinecone>=0.6.0",
    "openai>=1.95.1",
    "pinecone>=7.3.0",
    "pydantic-config>=0.3.0",
    "pypdf2>=3.0.1",
    "pytest>=8.4.1",
    "python-docx>=1.2.0",
    "ruff>=0.12.3",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.24",
    "tool>=0.8.0",
]
